--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+raspberrypi-net-mods (1.2.5) jessie; urgency=medium
+
+  * Remove raspberrypi-ui-mods dependency
+  * Add ORIGSUM3
+
+ -- Serge Schneider <serge@raspberrypi.org>  Tue, 18 Oct 2016 14:41:55 +0100
+
 raspberrypi-net-mods (1.2.4) jessie; urgency=medium
 
   * Make the package archutecture-independant
