--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+raspberrypi-net-mods (1.2.6) stretch; urgency=medium
+
+  * Remove configuration from interfaces file.
+    - Use DHCPCD to start wpa_supplicant instead
+
+ -- Serge Schneider <serge@raspberrypi.org>  Mon, 10 Jul 2017 10:22:27 +0100
+
 raspberrypi-net-mods (1.2.5) jessie; urgency=medium
 
   * Remove raspberrypi-ui-mods dependency
