--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+raspberrypi-net-mods (1.2.8) buster; urgency=medium
+
+  * Add message if WiFi is blocked
+
+ -- Serge Schneider <serge@raspberrypi.org>  Tue, 30 Apr 2019 12:07:23 +0100
+
 raspberrypi-net-mods (1.2.7) stretch; urgency=medium
 
   * Fix wait.conf on upgrade
