--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+raspberrypi-net-mods (1.3.2) buster; urgency=medium
+
+  * Revert 1.3.1, since it causes the service to time out in some cases
+    - https://github.com/RPi-Distro/raspberrypi-net-mods/issues/6
+
+ -- Serge Schneider <serge@raspberrypi.com>  Thu, 04 Nov 2021 22:24:07 +0000
+
 raspberrypi-net-mods (1.3.1) buster; urgency=medium
 
   * Add Wants=systemd-rfkill.service to systemd service
