--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+raspberrypi-net-mods (1.3.4) bullseye; urgency=medium
+
+  * Update wpa_supplicant.conf copy mechanism
+    - Run as a script
+    - Switch to dhcpcd if when used
+
+ -- Serge Schneider <serge@raspberrypi.com>  Mon, 08 Aug 2022 11:20:23 +0100
+
 raspberrypi-net-mods (1.3.3) buster; urgency=medium
 
   * Remove systemd-rfkill persistance files in case it is not running yet
