--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+raspberrypi-net-mods (1.4.0) bookworm; urgency=medium
+
+  * Remove deprecated features
+
+ -- Serge Schneider <serge@raspberrypi.com>  Thu, 12 Oct 2023 15:17:57 +0100
+
 raspberrypi-net-mods (1.3.4) bullseye; urgency=medium
 
   * Update wpa_supplicant.conf copy mechanism
