--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+raspberrypi-net-mods (1.4.3) bookworm; urgency=medium
+
+  * Remove blocked wifi message if regulatory domain is set
+
+ -- Serge Schneider <serge@raspberrypi.com>  Fri, 29 Nov 2024 16:21:56 +0000
+
 raspberrypi-net-mods (1.4.2) bookworm; urgency=medium
 
   * Remove country code message if it's already set
